# iscc-service

./: .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
iscc_service/: __init__.py  config.py  conn.py  init.py  main.py  models.py  tasks.py  tools.py
tests/: test_iscc_service.py
